# vectordb-example

./: README.md  setup.bash
python/: 01_data_upload.py  02_set_index.py  03_query_movies.py  04_gradio_example.py  04_only_query.py  data_upload.py  query_movies.py  requirements.txt  set_index.py
rust/: .env  Cargo.toml
rust/examples/: main.rs
rust/src/: 01_data_upload.rs  02_set_embeddings_local.rs  02_set_embeddings_remote.rs  03_query_local.rs  03_query_remote.rs  utilities.rs
