[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "01_data_upload"
path = "src/01_data_upload.rs"

[[bin]]
name = "02_set_embeddings_local"
path = "src/02_set_embeddings_local.rs"

[[bin]]
name = "02_set_embeddings_remote"
path = "src/02_set_embeddings_remote.rs"

[[bin]]
name = "03_query_local"
path = "src/03_query_local.rs"



[dependencies]
rust-bert = {version = "0.22.0"}
anyhow = "1.0.40"
tch = "0.14.0"

postgres = { version = "0.19", features = ["with-serde_json-1"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25.0", features = ["tokio-comp", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
rust_decimal = {version = "1.34.3", features = ["tokio-pg"]}
byteorder = "1.4"